--- a/Public/Css/Pages/Home.css
+++ b/Public/Css/Pages/Home.css
@@ -1,5 +1,4 @@
-@import url("../../../../../src/Css/Libs/Bootstrap.css");
-@import url("../Libs/Class.css");
+@import url("../Libs/Bootstrap.css");
 main#root {
 
 }
